# libdsc

./: .SRCINFO  .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  PKGBUILD  README.md  ROADMAP.md  SECURITY.md  libdsc.pc.in  test_stack  test_vector
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yaml  FUNDING.yml
.github/actions/coverage/: action.yaml
.github/actions/download-artifacts/: action.yaml
.github/actions/package/: action.yaml
.github/actions/run-benchmarks/: action.yaml
.github/actions/run-tests/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: benchmark.yaml  c.yml  ci.yaml  release.yaml
benchmarks/: CMakeLists.txt  benchmark_forward_list.cpp  benchmark_list.cpp  benchmark_queue.cpp  benchmark_stack.cpp  benchmark_unordered_map.cpp  benchmark_unordered_set.cpp  benchmark_vector.cpp
cmake/: libdsc-config.cmake.in
docs/: dsc_error.md  dsc_list.md  dsc_map.md  dsc_queue.md  dsc_set.md  dsc_stack.md  dsc_type.md  dsc_vector.md  list.md  map.md  queue.md  set.md  stack.md  vector.md
docs/html/: doxygen_crawl.html  navtreedata.js
docs/latex/: refman.tex
examples/: CMakeLists.txt  forward_list_example.c  list_example.c  queue_example.c  stack_example.c  unordered_map_example.c  unordered_set_example.c  vector_example.c
include/: dsc_data.h  dsc_error.h  dsc_hash_set.h  dsc_hash_utils.h  dsc_list.h  dsc_map.h  dsc_node.h  dsc_queue.h  dsc_set.h  dsc_set_utils.h  dsc_stack.h  dsc_type.h  dsc_utils.h  dsc_vector.h  libdsc.h
include/libdsc/: common.h  forward_list.h  list.h  queue.h  stack.h  unordered_map.h  unordered_set.h  vector.h
package/: README.md
package/arch/: PKGBUILD  README.md
package/deb/: changelog  control  copyright  libdsc-dev.install  libdsc0.install  rules
package/rpm/: libdsc.spec
packaging/arch/: .SRCINFO
packaging/debian/: README.Debian  changelog  control  copyright  rules  watch
packaging/rpm/: libdsc.spec
scripts/: arch.sh  build-arch.sh  build-debian.sh  build-rpm.sh  build.sh  debian.sh  docs.sh  format.sh  lint.sh  rpm.sh
src/: dsc_data.c  dsc_error.c  dsc_hash_utils.c  dsc_list.c  dsc_map.c  dsc_queue.c  dsc_set.c  dsc_set_utils.c  dsc_stack.c  dsc_type.c  dsc_utils.c  dsc_vector.c  forward_list.c  list.c  queue.c  stack.c  unordered_map.c  unordered_set.c  vector.c
src/include/: dsc_error.h  error.h  list.h
tests/: CMakeLists.txt  test_dsc_list.c  test_dsc_map.c  test_dsc_queue.c  test_dsc_set.c  test_dsc_stack.c  test_dsc_vector.c  test_forward_list.cpp  test_list.cpp  test_queue.cpp  test_stack.cpp  test_unordered_map.cpp  test_unordered_set.cpp  test_vector.cpp
